# products-api

./: .gitignore  Dockerfile  Makefile  Products_and_Supplies_API.postman_collection.json  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-ci.yml
src/: config.py  main.py
src/database/: create.sql  model.py  session.py
src/database/alembic/: README  env.py
src/database/alembic/versions/: 186c14f5e040_fix_relationship_between_order_and_.py  42d94e9d825e_remove_uniqueness_for_organisation_name.py  4d3cb6958088_fix_relationship_between_order_and_.py  5c8a39f2df7d_modify_relationship_between_orgs_and_.py  7a20d58b1c81_fix_relationship_between_order_and_.py  93f72a4b23fd_undo.py  a836e39c3494_first_migration.py  c8d9d44c36b4_add_hybrid_property_products_to_.py  da7701d1b980_make_orders_product_nullable_and_add_.py  f5e17b120a95_add_uniqueness_contraints_to_products_.py
src/database/crud/: base.py  order.py  organisation.py  product.py
src/database/models/: base.py  order.py  organisation.py  product.py
src/database/schemas/: order.py  organisation.py  product.py
src/routers/: order.py  organisation.py  ping.py  product.py
tests/: conftest.py  helpers.py  test_crud.py  test_ping.py  test_routers_order.py  test_routers_organisation.py  test_routers_product.py  test_schemas.py
