[tool.poetry]
name = "products-api"
version = "0.1.0"
description = "API for performing CRUD operations on Products, Orders, and Organisation database entries"
authors = ["japheth yates <japheth.yates@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
isort = "^5.12.0"
requests = "^2.31.0"
types-requests = "^2.31.0.1"
uvicorn = "^0.22.0"
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
